# ifrc-gates-backend

./: .env.example  .gitignore  ;  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  utils.py
.github/workflows/: ci.yml
apps/common/management/commands/: run_celery_dev.py
apps/data/: models.py
apps/migrate_csv/: admin.py  apps.py  forms.py  models.py  outlier_detect.py  tasks.py  views.py
apps/migrate_csv/migrations/: 0001_initial.py  0002_csvfile_file_type.py  0002_remove_importuserdatapreview_is_outlier_and_more.py  0003_countryfilteroptions.py  0004_countryfilteroptions_type.py  0005_rename_countryfilteroptions_cachedcountryfilteroptions.py  0006_alter_dataimport_file_type.py  0007_cachedcountryfilteroptions_region.py  0008_cachedcountryfilteroptions_thematic_and_more.py
apps/visualization/: admin.py  dataloaders.py  filters.py  forms.py  models.py  ordering.py  rest_filters.py  schema.py  serializers.py  types.py  utils.py  views.py
config/: aws.py  caches.py  celery.py  database_router.py  graphql.py  pagination.py  schema.py  settings.py  urls.py  utils.py
scripts/: run_develop.sh  run_prod.sh
templates/admin/: base_site.html
terraform/: acm_certificate.tf  alb.tf  autoscaling.tf  cloudwatch.tf  ecs.tf  iam_roles.tf  main.tf  prod.tfvars  redis.tf  secrets.tf  securitygrps.tf  staging.tfvars  variables.tf
terraform/templates/ecr_image/: image.json
terraform_cfg/: alb.tf  ecs.tf  iam_roles.tf  main.tf  prod.tfvars  secrets.tf  staging.tfvars  variables.tf  vpc.tf
terraform_cfg/templates/ecr_image/: image.json
(+2 files in other folders)
