[tool.poetry]
name = "ifrc-gates-server"
version = "0.1.0"
description = ""
authors = ["dev <dev@togglecorp.com>"]

[tool.poetry.dependencies]
Django = "^4.0.5"
python = "^3.10"
psycopg2 = "^2.9.3"
django-environ = "^0.9.0"
django-storages = "^1.12.3"

[tool.poetry.dev-dependencies]
factory-boy = "^3.2.1"
pytest-profiling = "*"
pytest-ordering = "*"
pytest-django = "*"
pytest-icdiff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
