[tool.poetry]
name = "ifrc-gates-server"
version = "0.1.0"
description = ""
authors = ["dev <dev@togglecorp.com>"]

[tool.poetry.dependencies]
Django = "^4.0.5"
python = "^3.10"
psycopg2 = "^2.9.3"
django-environ = "^0.9.0"
django-storages = "^1.12.3"
strawberry-graphql = "^0.123.3"
strawberry-graphql-django = "^0.4.0"
strawberry-django-plus = "^1.22.0"
starlette = "^0.20.4"
django-cors-headers = "^3.13.0"
pandas = "^1.4.3"
celery = "^5.2.7"
django-redis = "^5.2.0"
django-admin-autocomplete-filter = "^0.7.1"
djangorestframework = "^3.13.1"
drf-yasg = "^1.21.3"
django-filter = "^22.1"
gunicorn = "^20.1.0"
boto3 = "*"
django-tinymce = "^3.5.0"
sentry-sdk = "*"

[tool.poetry.dev-dependencies]
factory-boy = "^3.2.1"
pytest-profiling = "*"
pytest-ordering = "*"
pytest-django = "*"
pytest-icdiff = "*"
ipython = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
